fix weird gap at top of layout

--- a/assets/scss/_mydoc-navbar.scss
+++ b/assets/scss/_mydoc-navbar.scss
@@ -20,6 +20,7 @@
   flex-wrap: wrap;
 
   position: fixed;
+  top: -0.5px;
 
   @include media(">md") {
     height: $navbar-height-md;
